--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,20 @@
     "require": {
         "php": ">=5.3.9",
         "symfony/symfony": "2.8.*",
-        "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4",
+        "doctrine/collections": "~1.2",
+        "doctrine/common": "~2.5",
+        "doctrine/doctrine-bundle": "~1.3",
+        "doctrine/orm": "^2.4.8,<2.5",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "sylius/storage": "1.0.x-dev",
+        "sylius/resource": "1.0.x-dev",
+        "sylius/resource-bundle": "1.0.x-dev",
+        "sylius/locale": "1.0.x-dev",
+        "sylius/locale-bundle": "1.0.x-dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
